--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.8",
     "@vimeo/player": "^2.13.0",
+    "cloudinary-react": "^1.6.6",
+    "dotenv": "^8.2.0",
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
