--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.8",
     "@vimeo/player": "^2.13.0",
+    "cloudinary": "^1.23.0",
     "cloudinary-react": "^1.6.6",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
