--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "downlevelIteration": true,
     "noEmit": true,
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src",
+    "node_modules/@types/cloudinary-react/index.d.ts"
   ]
 }
