--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary-react": "^1.6.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.0.1",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
